# aws-iam-access-analyzer-solution

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  architecture_diagram.py  cicd_integration.py  comprehensive_solution.py  pyproject.toml  requirements.txt  security_dashboard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  policy-validation.yml
01-validate-policy/: identity-policy.json  resource-policy.json
04-cloudformation/01-policy-validator/: template.json
05-scps/policies/: policy2.json
docs/: ARCHITECTURE.md  BLOG.md  LINKEDIN_POST.md
examples/cdk/lib/: demo-stack.ts
examples/sample-policies/identity/: policy1.json  policy2.json
examples/sample-policies/identity/trust/: trust-policy.json
infrastructure/: access-analyzer-setup.yaml
src/access_analyzer/: __init__.py  __main__.py  cicd.py  client.py  dashboard.py
tests/: test_client.py  test_comprehensive_solution.py
